--- a/index.html
+++ b/index.html
@@ -26,6 +26,62 @@
 </header>
 <main>
   <section class="fwh-slide">
+    body {
+        background-color: white;
+        color:black;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        }
+        header{
+            background-color: rgb(136, 100, 100);
+           color:white;
+           padding: 20px;
+        }
+        section {
+            background:rgb(0, 0, 0);
+            color: white
+            padding: 20px;
+            display: flex;
+            flex-direction: columns;
+        }
+
+        div{
+            background:#eee8e8;
+            margin: auto
+            width: 100px;
+           }
+
+        ul{
+           display:flex;
+           flex-direction:row;
+           margin: 0;
+           padding:0;
+           list-style-type: none;
+           border:1px solid rgb(247, 245, 245);
+           justify-content:center;
+        }
+        li{
+            border:1px solid black;
+            display: inline;
+            margin: 0.5em;
+        }
+        footer{ 
+
+           display:flex;
+           flex-direction:row;
+           margin: 0;
+           padding:20px;
+           list-style-type: none;
+           border:1px solid rgb(136, 100, 100);
+           justify-content:center;
+        }
+</style>
+</head>
+
+<body>
+<header>
     <h1>"We're Here To Have a Little Fun"</h1>
         <p>Rumeal Melton and Wayne Hawkins are the self proclaimed Inebriated Geniuses. Join them and featured guest weekly as they <br>discuss the issues of the day in a hilarious and sometime intelligent style while also <br>consuming their favorite drinks of choice.
         </p>
