--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 </header>
 <main>
   <section class="fwh-slide">
-    body {
+    <style> 
+
+        body {
         background-color: white;
         color:black;
         font-family: Arial, Helvetica, sans-serif;
@@ -79,6 +81,9 @@
         }
 </style>
 </head>
+
+<body>
+<header>
 
 <body>
 <header>
