--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
         header{
             background-color: rgb(250, 244, 244);
-           color:white;
+           color:rgb(5, 0, 0);
            padding: 20px;
         }
         section {
