--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         body {
         background-color: white;
         color:black;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Comic Sans MS"
         margin: 0;
         padding: 0;
         text-align: center;
