--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         body {
         background-color: white;
         color:black;
-        font-family: Comic Sans MS"
+        font-family: "Comic Sans MS", cursive, sans-serif"
         margin: 0;
         padding: 0;
         text-align: center;
